11.10.1 (04-06-2024)
- Bug Fix: Apply payment blocking validation from debt processes, when generating reference codes with academic debt generation rules [#qubIT-Fenix-5130]

11.10.0 (03-06-2024)
- Refactor: Adds academic treasury classes for all web apps from academic treasury ui [#qubIT-Omnis-5875]

11.9.0 (31-05-2024)
- Improvement: Support scheduling for academic debt generation rules [#qubIT-Fenix-5345]

11.8.1 (21-05-2024)
- Bug Fix: Validate if there active customers with same fiscal number, only for active customers in Customer#checkRules [#qubIT-Fenix-5307]

11.8.0 (13-05-2024)
- Refactor: Debit note receive finantial entity and payor debt account [#qubIT-Fenix-4587]
- Refactor: Use ISibsPaymentCodePoolService#getDefaultDigitalPaymentPlatform method, to get default payment code pool for finantial entity [#qubIT-Fenix-4587]
- Refactor: Associate FinantialEntity to AcademicTreasuryEvent [#qubIT-Fenix-4587]
- Bug Fix: Create sibs payment request for ReservationTaxEventTarget, by finantial entity [#qubIT-Fenix-4587]
- Refactor: In method AcademicTariff#createDebitEntryForImprovement, do not create debit note. Instead create in AcademicTaxServices#createImprovementTax [#qubIT-Fenix-4587]

11.7.0 (02-05-2024)
- Refactor: Bring to PersonCustomer#getAllPendingInvoiceEntriesForPerson, the logic from module qubedu.module.academic-treasury-ui [#qubIT-Fenix-5207]
- Bug Fix: Fill the property DebtReportEntryBean#netExemptedAmount for credit entries also [#qubIT-Fenix-5223]
- Bug Fix: Declare two additional properties in DebtReportEntryBean and SettlementReportEntryBean, to present associated exemptions in different repor columns [#qubIT-Fenix-5223]

11.6.0 (19-04-2024)
- Refactor: Refactors code to isolate qub-docs dependency [#qubIT-Fenix-5085]

11.5.1 (16-04-2024)
- Bug Fix: Remove the logic of academic service request debt annulment, if before and after price amounts are different [#UL-FD-2063]

11.5.0 (15-04-2024)